# simple-render

./: .gitignore  CMakeLists.txt  README.md
rc/shaders/: test.vert
src/: simple-render.cpp  simple-render.hpp
src/display/: window.hpp
src/rendering/: commandbuffer.cpp  commandbuffer.hpp  commands.cpp  commands.hpp  context.cpp  context.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  pass.cpp  pass.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  rendering.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
src/util/: simplefile.cpp  simplefile.hpp
